--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "leveldown": "^6.1.1",
     "levelup": "^5.1.1",
     "prom-client": "^14.2.0",
+    "sqlite3": "^5.1.6",
     "ws": "^8.13.0"
   }
 }
