--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.3.4",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
+    "interchain-security": "^0.0.1",
     "leveldown": "^6.1.1",
     "levelup": "^5.1.1",
     "prom-client": "^14.2.0",
     "sqlite3": "^5.1.6",
     "ws": "^8.13.0"
-  }
+  },
+  "type": "module"
 }
