--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.3.4",
+    "bech32": "^2.0.0",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
     "interchain-security": "^0.0.1",
